# homeassistant-digitalstrom

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
custom_components/digitalstrom/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  scene.py  sensor.py  services.yaml  strings.json
docs/: ARCHITECTURE.md  DSS_API_NOTES.md  LIBRARY_DESIGN.md
pydigitalstrom/: __init__.py  alarms.py  apartment.py  auth.py  circuits.py  cli.py  client.py  events.py  exceptions.py  models.py  property.py
pydigitalstrom/addons/: __init__.py  base.py  scene_responder.py  timed_events.py  user_actions.py  user_states.py
tests/: test_events.py  test_models.py
