[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydigitalstrom"
version = "0.1.0"
description = "Async Python library for digitalSTROM dSS REST API (HA-agnostic)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "magictom74", email = "teuber@magictom.ch" },
]
keywords = ["digitalstrom", "dss", "home-automation", "smart-home", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "httpx >= 0.27",
]

[project.optional-dependencies]
cli = ["rich >= 13.0"]
dev = [
    "pytest >= 8.0",
    "pytest-asyncio >= 0.23",
    "respx >= 0.21",
    "mypy >= 1.10",
    "ruff >= 0.15.15",
]

[project.scripts]
pydigitalstrom-cli = "pydigitalstrom.cli:main"

[project.urls]
Repository = "https://github.com/magictom74/ha-digitalstrom"
Issues = "https://github.com/magictom74/ha-digitalstrom/issues"

[tool.hatch.build.targets.wheel]
packages = ["pydigitalstrom"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: marks tests that hit the real dSS (deselect with '-m \"not live\"')",
]
